tests/src/frontend/typechecking/invalid/capture_field.sk
mutable class B()
mutable class A(x: mutable B) {
  readonly fun foo(): B {
    this.x
  }
}
